attempt to fix scroll right on mobile

--- a/src/components/Pages/home/home.css
+++ b/src/components/Pages/home/home.css
@@ -9,6 +9,7 @@
   text-align: center;
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
 }
 
 .header {
